<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParent"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_wait"
        android:foreground="@color/foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="6dp"
        android:src="@drawable/ic_support"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/Wrap"
        android:gravity="center"
        android:text="@string/personal"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="20sp"
        android:layout_marginTop="38dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/personIcon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/person"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"/>

    <TextView
        android:id="@+id/nameTextView"
        style="@style/Wrap"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="20sp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personIcon"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Имя человека"/>

    <TextView
        android:id="@+id/surnameTextView"
        style="@style/Wrap"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Фаммилия человека"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/moneyCardView"
        style="@style/Wide"
        android:layout_height="55dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surnameTextView">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Wide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/surnameTextView"
            app:startIconDrawable="@drawable/ic_money">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Wide"
                android:layout_height="55dp"
                android:enabled="false"
                android:text="@string/no_money"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dealCardView"
        style="@style/Wide"
        android:layout_height="55dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moneyCardView">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Wide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/surnameTextView"
            app:startIconDrawable="@drawable/ic_deal">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Wide"
                android:layout_height="55dp"
                android:enabled="false"
                android:text="@string/no_deal"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/operatorLayout"
        style="@style/Wide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dealCardView"
        app:layout_constraintBottom_toTopOf="@id/stockIcon">

        <ImageView
            android:id="@+id/crossIcon"
            android:layout_height="46dp"
            android:layout_width="46dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/accountTextView"
            style="@style/Wrap"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/account_not_confirmed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/crossIcon"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/stockIcon"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:scaleType="centerCrop"
        android:src="@drawable/screenshot"
        android:foreground="@color/foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="@style/Wrap"
        android:text="@string/go_to"
        android:enabled="false"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="16dp"
        app:backgroundTint="@color/transparent_gray"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/stockIcon"/>

</androidx.constraintlayout.widget.ConstraintLayout>